Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24464

References to 'parent' produce warnings in Qt.createQmlObject()

    XMLWordPrintable

Details

    • dc3165178851b9bda71dd238c8a5faca4dfa7a45

    Description

      When creating a component dynamically by invoking Qt.createQmlObject from QML, references to 'parent' produce the following warning from V8:

      <file:line>: TypeError: Cannot read property '<property>' of null

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes