Remove warning produced by 'parent' reference.

When Qt.createQmlObject is invoked from QML, any contained references
to parent produce a warning from V8.  To prevent this, move the
assignment of the parent object to before the initial execution of the
bindings.

Task-number: QTBUG-24464
Change-Id: Ib330822f1ca46ec5a6af648a56197da09669c3f2
Reviewed-by: Martin Jones <martin.jones@nokia.com>