src/declarative/qml/v8/qdeclarativebuiltinfunctions.cpp
@@ -1096,8 +1096,17 @@ v8::Handle<v8::Value> createQmlObject(const v8::Arguments &args)
         V8THROW_ERROR("Qt.createQmlObject(): Component is not ready");
 
     QObject *obj = component.beginCreate(effectiveContext);
-    if (obj)
+    if (obj) {
         QDeclarativeData::get(obj, true)->setImplicitDestructible();
+
+        obj->setParent(parentArg);
+
+        QList<QDeclarativePrivate::AutoParentFunction> functions = QDeclarativeMetaType::parentFunctions();
+        for (int ii = 0; ii < functions.count(); ++ii) {
+            if (QDeclarativePrivate::Parented == functions.at(ii)(obj, parentArg))
+                break;
+        }
+    }
     component.completeCreate();
 
     if (component.isError()) {
@@ -1106,14 +1115,6 @@ v8::Handle<v8::Value> createQmlObject(const v8::Arguments &args)
     }
 
     Q_ASSERT(obj);
-
-    obj->setParent(parentArg);
-
-    QList<QDeclarativePrivate::AutoParentFunction> functions = QDeclarativeMetaType::parentFunctions();
-    for (int ii = 0; ii < functions.count(); ++ii) {
-        if (QDeclarativePrivate::Parented == functions.at(ii)(obj, parentArg))
-            break;
-    }
 
     return v8engine->newQObject(obj);
 }
